--- a/game-store-fe/src/pages/Inventory/Inventory.css
+++ b/game-store-fe/src/pages/Inventory/Inventory.css
@@ -69,4 +69,19 @@
     height: 30px;
   }
 
+  .inventory-body {
+    width: 100%;
+    height: auto;
+    background-color: #fff;
+    min-height: 69vh;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+  }
+  
+  .spinner-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
