--- a/game-store-fe/src/components/Item/Item.css
+++ b/game-store-fe/src/components/Item/Item.css
@@ -1,5 +1,6 @@
 .item-container {
   .item-card {
+    position: relative;
     max-width: 60px;
     padding: 0px;
     box-sizing: content-box;
@@ -43,7 +44,7 @@
     font-size: 12px;
     font-weight: bold;
     justify-self: center;
-    margin-top: 42px;
+    margin-top: 70%;
     background-color: #fff;
     border: 1px solid #7749f8;
     color: #7749f8;
